app/assets/stylesheets/maps.scss
// Place all the styles related to the maps controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#map2 {
  width: 500px;
  height: 500px;
}

.map-size {
  width: 500px;
  height: 500px;
}


#map {
  width: 500px;
  height: 500px;
}

.map-container {
  width: 700px;
  height: 700px;
}

.map-display {
  margin-bottom: 100px;
}

.map-details {
  list-style-type: none;
  padding-left: 0;
  line-height: 25px;
  h3 {
    color: #a12f2d;
  }
}

.title {
  text-align: center;
  margin-bottom: 30px;
}

.form-wrapper {
  margin-top:100px;
  text-align:center;
}

#save-map {
  position: absolute;
  right: 55px;
  top: 4px;
}

#reset-map {
  position: absolute;
  top: 35px;
  right: 55px;
}

.container {
  margin-top: 30px;
}

table {
  margin-bottom: 50px !important;
}

.table-desc {
  max-width:300px;
  word-wrap:break-word; 
}

.back-button {
  position: absolute;
  top: 0;
  right: 0;
}

